--- a/NKUST/Spider/pom.xml
+++ b/NKUST/Spider/pom.xml
@@ -16,6 +16,10 @@
             <version>1.14.3</version>
         </dependency>
     </dependencies>
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
 
 </project>
